--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -59,10 +59,13 @@
         enabled: true
 
     - name: Copy frontend source code
-      synchronize:
+      copy:
         src: ../frontend/
         dest: /home/ec2-user/frontend/
-        delete: yes
+        owner: ec2-user
+        group: ec2-user
+        mode: preserve
+
 
     - name: Install frontend dependencies
       shell: npm install
