--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -25,6 +25,14 @@
         mkdir -p /home/ec2-user/backend
         tar -xzf /home/ec2-user/backend.tar.gz -C /home/ec2-user/backend
 
+    - name: Upload Firebase service key
+      copy:
+        src: firebase-service-key.json
+        dest: /home/ec2-user/backend/firebase-service-key.json
+        owner: ec2-user
+        group: ec2-user
+        mode: '0600'
+
     - name: Install backend dependencies
       shell: npm install
       args:
