--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,7 +59,7 @@ jobs:
 
       - name: Generate Ansible inventory from repository variables
         run: |
-          cat <<EOF > ansible/inventory
+          cat <<EOF > ansible/inventory/hosts
           [backend]
           ${{ vars.BACKEND_PRIVATE_IP }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -i ~/.ssh/seoul.key.pem -W %h:%p ec2-user@${{ vars.BASTION_PUBLIC_IP }}"'
 
