--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -46,7 +46,6 @@
       args:
         chdir: /home/ec2-user/backend/
 
-
 - name: Deploy Frontend (via nginx)
   hosts: frontend
   become: true
@@ -80,6 +79,12 @@
         owner: root
         group: root
         mode: 0644
+
+    - name: Test nginx config before reload
+      shell: nginx -t
+      register: nginx_test
+      failed_when: nginx_test.rc != 0
+      ignore_errors: false
 
     - name: Reload nginx
       service:
