--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -20,10 +20,11 @@
         dest: /home/ec2-user/backend.tar.gz
 
     - name: Extract backend code on EC2
-      shell: |
-        rm -rf /home/ec2-user/backend
-        mkdir -p /home/ec2-user/backend
-        tar -xzf /home/ec2-user/backend.tar.gz -C /home/ec2-user/backend
+      unarchive:
+        src: /home/ec2-user/backend.tar.gz
+        dest: /home/ec2-user/backend
+        remote_src: yes
+        extra_opts: [--strip-components=1]
 
     - name: Upload Firebase service key
       copy:
@@ -32,19 +33,34 @@
         owner: ec2-user
         group: ec2-user
         mode: '0600'
+        validate: 'python3 -m json.tool %s'
 
     - name: Install backend dependencies
-      shell: npm install
+      shell: npm ci
       args:
         chdir: /home/ec2-user/backend/
 
-    - name: Start backend with PM2
+    - name: Start backend with PM2 (only if server.js exists)
       shell: |
-        pm2 delete parcel-backend || true
-        pm2 start server.js --name parcel-backend
+        if [ -f server.js ]; then
+          pm2 delete parcel-backend || true
+          pm2 start server.js --name parcel-backend
+          pm2 save
+        else
+          echo "❌ server.js not found"
+          exit 1
+        fi
+      args:
+        chdir: /home/ec2-user/backend/
+
+    - name: Enable PM2 startup on reboot
+      shell: |
+        pm2 startup systemd -u ec2-user --hp /home/ec2-user
         pm2 save
       args:
         chdir: /home/ec2-user/backend/
+      ignore_errors: yes
+
 
 - name: Deploy Frontend (via nginx)
   hosts: frontend
@@ -67,25 +83,26 @@
         dest: /home/ec2-user/frontend-build.tar.gz
 
     - name: Extract frontend build on EC2
-      shell: |
-        mkdir -p /usr/share/nginx/html
-        tar -xzf /home/ec2-user/frontend-build.tar.gz -C /usr/share/nginx/html
+      unarchive:
+        src: /home/ec2-user/frontend-build.tar.gz
+        dest: /usr/share/nginx/html
+        remote_src: yes
+        extra_opts: [--strip-components=1]
 
     - name: Remove default nginx config (if exists)
       file:
         path: /etc/nginx/conf.d/default.conf
         state: absent
 
-    - name: Configure nginx for SPA
+    - name: Configure nginx for SPA (conf.d 방식)
       copy:
-        src: ./nginx.conf
-        dest: /etc/nginx/nginx.conf
-        backup: yes
+        src: ./spa-nginx.conf
+        dest: /etc/nginx/conf.d/spa.conf
         owner: root
         group: root
         mode: 0644
 
-    - name: Test nginx config before reload
+    - name: Test nginx config before restart
       shell: nginx -t
       register: nginx_test
       failed_when: nginx_test.rc != 0
@@ -95,4 +112,3 @@
       service:
         name: nginx
         state: restarted
-
