--- a/ansible/nginx.conf
+++ b/ansible/nginx.conf
@@ -14,17 +14,5 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
-    server {
-        listen 80;
-        server_name www.classpick.click;
-
-        root /usr/share/nginx/html;
-        index index.html;
-
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
-
-        error_page 404 /index.html;
-    }
+    include /etc/nginx/conf.d/*.conf;
 }
