--- a/ansible/spa.conf
+++ b/ansible/spa.conf
@@ -5,6 +5,10 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
+  location /static/ {
+    try_files $uri =404;
+  }
+
   location / {
     try_files $uri /index.html;
   }
