--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,6 +75,6 @@ jobs:
       - name: Run Ansible Playbook
         run: |
           cd ansible
-          ansible-playbook playbook.yml -i inventory
+          ansible-playbook playbook.yml -i inventory --extra-vars "backend_private_ip=${{ vars.BACKEND_PRIVATE_IP }}"
         env:
           ANSIBLE_HOST_KEY_CHECKING: "False"
