--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -109,7 +109,7 @@
         state: absent
 
     - name: Configure nginx for SPA (conf.d 방식)
-      copy:
+      template:
         src: spa.conf.j2
         dest: /etc/nginx/conf.d/spa.conf
         owner: root
