--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,15 +66,15 @@ jobs:
           mkdir -p ansible/inventory
           cat <<EOF > ansible/inventory/hosts
           [backend]
-          ${{ vars.BACKEND_PRIVATE_IP }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -i ~/.ssh/seoul.key.pem -W %h:%p ec2-user@${{ vars.BASTION_PUBLIC_DEV_IP }}"'
+          ${{ vars.BACKEND_PRIVATE_DEV_02_IP }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -i ~/.ssh/seoul.key.pem -W %h:%p ec2-user@${{ vars.BASTION_PUBLIC_DEV_IP }}"'
 
           [frontend]
-          ${{ vars.FRONTEND_PRIVATE_IP }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -i ~/.ssh/seoul.key.pem -W %h:%p ec2-user@${{ vars.BASTION_PUBLIC_DEV_IP }}"'
+          ${{ vars.FRONTEND_PRIVATE_DEV_02_IP }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -i ~/.ssh/seoul.key.pem -W %h:%p ec2-user@${{ vars.BASTION_PUBLIC_DEV_IP }}"'
           EOF
 
       - name: Run Ansible Playbook
         run: |
           cd ansible
-          ansible-playbook playbook.yml -i inventory --extra-vars "backend_private_ip=${{ vars.BACKEND_PRIVATE_IP }}"
+          ansible-playbook playbook.yml -i inventory --extra-vars "BACKEND_PRIVATE_DEV_02_IP=${{ vars.BACKEND_PRIVATE_DEV_02_IP }}"
         env:
           ANSIBLE_HOST_KEY_CHECKING: "False"
