--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,8 @@ jobs:
           mkdir -p ~/.ssh
           printf "%s" "${{ secrets.SSH_KEY }}" > ~/.ssh/seoul.key.pem
           chmod 600 ~/.ssh/seoul.key.pem
-          ssh-keyscan -H ${{ vars.BASTION_PUBLIC_DEV_IP }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ vars.BASTION_PUBLIC_DEV_01_IP }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ vars.BASTION_PUBLIC_DEV_02_IP }} >> ~/.ssh/known_hosts
         shell: bash
 
       - name: Install Ansible
@@ -66,10 +67,12 @@ jobs:
           mkdir -p ansible/inventory
           cat <<EOF > ansible/inventory/hosts
           [backend]
-          ${{ vars.BACKEND_PRIVATE_DEV_02_IP }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -i ~/.ssh/seoul.key.pem -W %h:%p ec2-user@${{ vars.BASTION_PUBLIC_DEV_IP }}"'
+          ${{ vars.BACKEND_PRIVATE_DEV_01_IP }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -i ~/.ssh/seoul.key.pem ec2-user@${{ vars.BASTION_PUBLIC_DEV_01_IP }}"'
+          ${{ vars.BACKEND_PRIVATE_DEV_02_IP }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -i ~/.ssh/seoul.key.pem ec2-user@${{ vars.BASTION_PUBLIC_DEV_02_IP }}"'
 
           [frontend]
-          ${{ vars.FRONTEND_PRIVATE_DEV_02_IP }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -i ~/.ssh/seoul.key.pem -W %h:%p ec2-user@${{ vars.BASTION_PUBLIC_DEV_IP }}"'
+          ${{ vars.FRONTEND_PRIVATE_DEV_01_IP }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -i ~/.ssh/seoul.key.pem ec2-user@${{ vars.BASTION_PUBLIC_DEV_01_IP }}"'
+          ${{ vars.FRONTEND_PRIVATE_DEV_02_IP }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -i ~/.ssh/seoul.key.pem ec2-user@${{ vars.BASTION_PUBLIC_DEV_02_IP }}"'
           EOF
 
       - name: Run Ansible Playbook
