--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,11 @@ jobs:
 
       - name: Test SSH to Bastion
         run: |
-          nc -zv ${{ vars["BASTION_PUBLIC_${{ steps.env.outputs.prefix }}_01_IP"] }} 22 || echo "❌ Bastion 1 not reachable"
-          nc -zv ${{ vars["BASTION_PUBLIC_${{ steps.env.outputs.prefix }}_02_IP"] }} 22 || echo "❌ Bastion 2 not reachable"
+          nc -zv ${{ env.BASTION_01 }} 22 || echo "❌ Bastion 1 not reachable"
+          nc -zv ${{ env.BASTION_02 }} 22 || echo "❌ Bastion 2 not reachable"
+        env:
+          BASTION_01: ${{ vars['BASTION_PUBLIC_' + steps.env.outputs.prefix + '_01_IP'] }}
+          BASTION_02: ${{ vars['BASTION_PUBLIC_' + steps.env.outputs.prefix + '_02_IP'] }}
 
       - name: Set up Node.js for frontend build
         uses: actions/setup-node@v3
@@ -71,9 +74,12 @@ jobs:
           mkdir -p ~/.ssh
           printf "%s" "${{ secrets.SSH_KEY }}" > ~/.ssh/seoul.key.pem
           chmod 600 ~/.ssh/seoul.key.pem
-          ssh-keyscan -H ${{ vars["BASTION_PUBLIC_${{ steps.env.outputs.prefix }}_01_IP"] }} >> ~/.ssh/known_hosts
-          ssh-keyscan -H ${{ vars["BASTION_PUBLIC_${{ steps.env.outputs.prefix }}_02_IP"] }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H "$BASTION_01" >> ~/.ssh/known_hosts
+          ssh-keyscan -H "$BASTION_02" >> ~/.ssh/known_hosts
         shell: bash
+        env:
+          BASTION_01: ${{ vars['BASTION_PUBLIC_' + steps.env.outputs.prefix + '_01_IP'] }}
+          BASTION_02: ${{ vars['BASTION_PUBLIC_' + steps.env.outputs.prefix + '_02_IP'] }}
 
       - name: Install Ansible
         run: |
@@ -97,6 +103,7 @@ jobs:
       - name: Run Ansible Playbook
         run: |
           cd ansible
-          ansible-playbook playbook.yml -i inventory --extra-vars "backend_private_ip=${{ vars["BACKEND_PRIVATE_${{ steps.env.outputs.prefix }}_02_IP"] }}"
+          ansible-playbook playbook.yml -i inventory --extra-vars "backend_private_ip=${{ vars["BACKEND_PRIVATE_$BACKEND_PRIVATE_02"] }}"
         env:
           ANSIBLE_HOST_KEY_CHECKING: "False"
+          BACKEND_PRIVATE_02: ${{ vars['BACKEND_PRIVATE_' + steps.env.outputs.prefix + '_02_IP'] }}
