--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy via Ansible
 
 on:
   push:
-    branches: 
+    branches:
       - main
       - dev
       - test
@@ -18,25 +18,23 @@ jobs:
       - name: Set environment prefix from branch
         id: env
         run: |
-          if [[ "${GITHUB_REF##*/}" == "main" ]]; then
+          BRANCH="${GITHUB_REF##*/}"
+          if [[ "$BRANCH" == "main" ]]; then
             echo "prefix=PROD" >> $GITHUB_OUTPUT
-          elif [[ "${GITHUB_REF##*/}" == "dev" ]]; then
+          elif [[ "$BRANCH" == "dev" ]]; then
             echo "prefix=DEV" >> $GITHUB_OUTPUT
-          elif [[ "${GITHUB_REF##*/}" == "test" ]]; then
+          elif [[ "$BRANCH" == "test" ]]; then
             echo "prefix=TEST" >> $GITHUB_OUTPUT
           else
-            echo "❌ Invalid branch"
+            echo "Invalid branch: $BRANCH"
             exit 1
           fi
 
       - name: Test SSH to Bastion
         run: |
-          nc -zv ${{ env.BASTION_01 }} 22 || echo "❌ Bastion 1 not reachable"
-          nc -zv ${{ env.BASTION_02 }} 22 || echo "❌ Bastion 2 not reachable"
-        env:
-          PREFIX: ${{ steps.env.outputs.prefix }}
-          BASTION_01: ${{ format('BASTION_PUBLIC_{0}_01_IP', steps.env.outputs.prefix) }}
-          BASTION_02: ${{ format('BASTION_PUBLIC_{0}_02_IP', steps.env.outputs.prefix) }}
+          echo "🔗 Testing SSH to Bastions"
+          nc -zv ${{ vars[format('BASTION_PUBLIC_{0}_01_IP', steps.env.outputs.prefix)] }} 22 || echo "❌ Bastion 1 not reachable"
+          nc -zv ${{ vars[format('BASTION_PUBLIC_{0}_02_IP', steps.env.outputs.prefix)] }} 22 || echo "❌ Bastion 2 not reachable"
 
       - name: Set up Node.js for frontend build
         uses: actions/setup-node@v3
@@ -66,22 +64,16 @@ jobs:
 
       - name: Create firebase-service-key.json from secret
         run: |
-          cat <<EOF > ansible/firebase-service-key.json
-          ${{ secrets.FIREBASE_SERVICE_KEY_JSON }}
-          EOF
+          echo "${{ secrets.FIREBASE_SERVICE_KEY_JSON }}" > ansible/firebase-service-key.json
 
       - name: Set up SSH keys
         run: |
           mkdir -p ~/.ssh
           printf "%s" "${{ secrets.SSH_KEY }}" > ~/.ssh/seoul.key.pem
           chmod 600 ~/.ssh/seoul.key.pem
-          ssh-keyscan -H "${{ vars[env.BASTION_01] }}" >> ~/.ssh/known_hosts
-          ssh-keyscan -H "${{ vars[env.BASTION_02] }}" >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ vars[format('BASTION_PUBLIC_{0}_01_IP', steps.env.outputs.prefix)] }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ vars[format('BASTION_PUBLIC_{0}_02_IP', steps.env.outputs.prefix)] }} >> ~/.ssh/known_hosts
         shell: bash
-        env:
-          PREFIX: ${{ steps.env.outputs.prefix }}
-          BASTION_01: ${{ format('BASTION_PUBLIC_{0}_01_IP', steps.env.outputs.prefix) }}
-          BASTION_02: ${{ format('BASTION_PUBLIC_{0}_02_IP', steps.env.outputs.prefix) }}
 
       - name: Install Ansible
         run: |
@@ -90,23 +82,21 @@ jobs:
 
       - name: Generate Ansible inventory from repository variables
         run: |
-          PREFIX=${{ steps.env.outputs.prefix }}
           mkdir -p ansible/inventory
           cat <<EOF > ansible/inventory/hosts
           [backend]
-          ${{ vars["BACKEND_PRIVATE_${PREFIX}_01_IP"] }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -i ~/.ssh/seoul.key.pem ec2-user@${{ vars["BASTION_PUBLIC_${PREFIX}_01_IP"] }}"'
-          ${{ vars["BACKEND_PRIVATE_${PREFIX}_02_IP"] }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -i ~/.ssh/seoul.key.pem ec2-user@${{ vars["BASTION_PUBLIC_${PREFIX}_02_IP"] }}"'
+          ${{ vars[format('BACKEND_PRIVATE_{0}_01_IP', steps.env.outputs.prefix)] }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -i ~/.ssh/seoul.key.pem ec2-user@${{ vars[format('BASTION_PUBLIC_{0}_01_IP', steps.env.outputs.prefix)] }}"'
+          ${{ vars[format('BACKEND_PRIVATE_{0}_02_IP', steps.env.outputs.prefix)] }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -i ~/.ssh/seoul.key.pem ec2-user@${{ vars[format('BASTION_PUBLIC_{0}_02_IP', steps.env.outputs.prefix)] }}"'
 
           [frontend]
-          ${{ vars["FRONTEND_PRIVATE_${PREFIX}_01_IP"] }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -i ~/.ssh/seoul.key.pem ec2-user@${{ vars["BASTION_PUBLIC_${PREFIX}_01_IP"] }}"'
-          ${{ vars["FRONTEND_PRIVATE_${PREFIX}_02_IP"] }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -i ~/.ssh/seoul.key.pem ec2-user@${{ vars["BASTION_PUBLIC_${PREFIX}_02_IP"] }}"'
+          ${{ vars[format('FRONTEND_PRIVATE_{0}_01_IP', steps.env.outputs.prefix)] }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -i ~/.ssh/seoul.key.pem ec2-user@${{ vars[format('BASTION_PUBLIC_{0}_01_IP', steps.env.outputs.prefix)] }}"'
+          ${{ vars[format('FRONTEND_PRIVATE_{0}_02_IP', steps.env.outputs.prefix)] }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -i ~/.ssh/seoul.key.pem ec2-user@${{ vars[format('BASTION_PUBLIC_{0}_02_IP', steps.env.outputs.prefix)] }}"'
           EOF
+        shell: bash
 
       - name: Run Ansible Playbook
         run: |
           cd ansible
-          ansible-playbook playbook.yml -i inventory --extra-vars "backend_private_ip=${{ vars[env.BACKEND_02] }}"
+          ansible-playbook playbook.yml -i inventory --extra-vars "backend_private_ip=${{ vars[format('BACKEND_PRIVATE_{0}_02_IP', steps.env.outputs.prefix)] }}"
         env:
-          PREFIX: ${{ steps.env.outputs.prefix }}
-          BACKEND_02: ${{ format('BACKEND_PRIVATE_{0}_02_IP', steps.env.outputs.prefix) }}
           ANSIBLE_HOST_KEY_CHECKING: "False"
