--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,12 +85,12 @@ jobs:
           mkdir -p ansible/inventory
           cat <<EOF > ansible/inventory/hosts
           [backend]
-          ${{ vars[format('BACKEND_PRIVATE_{0}_01_IP', steps.env.outputs.prefix)] }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -i ~/.ssh/seoul.key.pem ec2-user@${{ vars[format('BASTION_PUBLIC_{0}_01_IP', steps.env.outputs.prefix)] }}"'
-          ${{ vars[format('BACKEND_PRIVATE_{0}_02_IP', steps.env.outputs.prefix)] }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -i ~/.ssh/seoul.key.pem ec2-user@${{ vars[format('BASTION_PUBLIC_{0}_02_IP', steps.env.outputs.prefix)] }}"'
+          ${{ vars[format('BACKEND_PRIVATE_{0}_01_IP', steps.env.outputs.prefix)] }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:22 -i ~/.ssh/seoul.key.pem ec2-user@${{ vars[format('BASTION_PUBLIC_{0}_01_IP', steps.env.outputs.prefix)] }}"'
+          ${{ vars[format('BACKEND_PRIVATE_{0}_02_IP', steps.env.outputs.prefix)] }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:22 -i ~/.ssh/seoul.key.pem ec2-user@${{ vars[format('BASTION_PUBLIC_{0}_02_IP', steps.env.outputs.prefix)] }}"'
 
           [frontend]
-          ${{ vars[format('FRONTEND_PRIVATE_{0}_01_IP', steps.env.outputs.prefix)] }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -i ~/.ssh/seoul.key.pem ec2-user@${{ vars[format('BASTION_PUBLIC_{0}_01_IP', steps.env.outputs.prefix)] }}"'
-          ${{ vars[format('FRONTEND_PRIVATE_{0}_02_IP', steps.env.outputs.prefix)] }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -i ~/.ssh/seoul.key.pem ec2-user@${{ vars[format('BASTION_PUBLIC_{0}_02_IP', steps.env.outputs.prefix)] }}"'
+          ${{ vars[format('FRONTEND_PRIVATE_{0}_01_IP', steps.env.outputs.prefix)] }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:22 -i ~/.ssh/seoul.key.pem ec2-user@${{ vars[format('BASTION_PUBLIC_{0}_01_IP', steps.env.outputs.prefix)] }}"'
+          ${{ vars[format('FRONTEND_PRIVATE_{0}_02_IP', steps.env.outputs.prefix)] }} ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/seoul.key.pem ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:22 -i ~/.ssh/seoul.key.pem ec2-user@${{ vars[format('BASTION_PUBLIC_{0}_02_IP', steps.env.outputs.prefix)] }}"'
           EOF
         shell: bash
 
