--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -119,6 +119,10 @@
         owner: root
         group: root
         mode: 0644
+      vars:
+        backend_private_ip: "{{ backend_private_ip }}"
+        backend_port: "{{ backend_port }}"
+        server_name: "{{ server_name }}"
 
     - name: Test nginx config before restart
       shell: nginx -t
