--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Create firebase-service-key.json from secret
         run: |
-          echo "${{ secrets.FIREBASE_SERVICE_KEY_JSON }}" > ansible/firebase-service-key.json
+          echo '${{ secrets.FIREBASE_SERVICE_KEY_JSON }}' > ansible/firebase-service-key.json
 
       - name: Set up SSH keys
         run: |
