--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,6 +66,13 @@ jobs:
       - name: Move frontend build archive into ansible folder
         run: mv frontend-build.tar.gz ansible/
 
+      - name: ✅ Run backend & check Prometheus metrics
+        if: github.ref_name == 'main'  # ✅ main 브랜치에서만 실행
+        run: |
+          nohup node backend/server.js > backend.log 2>&1 &
+          sleep 5
+          curl -f http://localhost:4000/metrics || (echo "❌ /metrics 응답 실패" && cat backend.log && exit 1)
+      
       - name: Compress backend source
         run: tar -czf backend.tar.gz -C backend .
 
