--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -45,6 +45,13 @@
         mode: '0600'
         validate: 'python3 -m json.tool %s'
 
+    - name: Install backend dependencies
+      shell: |
+        rm -f package-lock.json
+        npm install
+      args:
+        chdir: /home/ec2-user/backend/
+
     - name: Start backend with PM2 (only if server.js exists)
       shell: |
         if [ -f server.js ]; then
