--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0",
-    "prom-client": "^14.1.1"
+    "prom-client": "^14.1.1",
+    "nodemailer": "^6.9.13"
   }
 }
