--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -136,7 +136,7 @@
         group: root
         mode: 0644
       vars:
-        backend_private_ip: "{{ backend_private_ip }}"
+        backend_private_ip: "{{ backend_target_ip }}"
         backend_port: "{{ backend_port }}"
         server_name: "{{ server_name }}"
 
